springcloud hystrix dashboard

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,5 @@ include 'cloud-provider-hystrix-payment8001'
 findProject(':cloud-provider-hystrix-payment8001')?.name = 'cloud-provider-hystrix-payment8001'
 include 'cloud-consumer-hystrix-order80'
 findProject(':cloud-consumer-hystrix-order80')?.name = 'cloud-consumer-hystrix-order80'
+include 'cloud-consumer-hystrix-dashboard9001'
+
