--- a/cloud-gateway-gateway0527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway0527/src/main/resources/application.yml
@@ -15,15 +15,15 @@ spring:
 #          uri: http://localhost:8001         #routing host
           uri: lb://CLOUD-PAYMENT-SERVICE     #routing to service
           predicates:
-            - Path=/payment/**            #predicate to match uri
+            - Path=/payment/get/**            #predicate to match uri
 
         - id: payment_routh2 #payment_route     #routing id
 #          uri: http://localhost:8001           #routing host
           uri: lb://CLOUD-PAYMENT-SERVICE       #routing to service
           predicates:
-            - Path=/payment/**        # predicate to match uri
+            - Path=/payment/lb/**        # predicate to match uri
+            - Cookie=username,myname
             # - After=2020-05-21T15:51:37.485+08:00[Asia/Shanghai]
-            #- Cookie=username,zzyy
             #- Header=X-Request-Id, \d+  #
 eureka:
   instance:
