--- a/settings.gradle
+++ b/settings.gradle
@@ -1,30 +1,21 @@
 rootProject.name = 'spring-cloud-learning'
-include 'cloud-provider-payment8001'
-findProject(':cloud-provider-payment8001')?.name = 'cloud-provider-payment8001'
 include 'cloud-consumer-order80'
-findProject(':cloud-consumer-order80')?.name = 'cloud-consumer-order80'
 include 'cloud-api-common'
-findProject(':cloud-api-common')?.name = 'cloud-api-common'
 include 'cloud-eureka-server7001'
-findProject(':cloud-eureka-server7001')?.name = 'cloud-eureka-server7001'
 include 'cloud-eureka-server7002'
-findProject(':cloud-eureka-server7002')?.name = 'cloud-eureka-server7002'
+include 'cloud-provider-payment8001'
 include 'cloud-provider-payment8002'
-findProject(':cloud-provider-payment8002')?.name = 'cloud-provider-payment8002'
 include 'cloud-provider-payment8004'
-findProject(':cloud-provider-payment8004')?.name = 'cloud-provider-payment8004'
 include 'cloud-consumerzk-order80'
-findProject(':cloud-consumerzk-order80')?.name = 'cloud-consumerzk-order80'
 include 'cloud-providerconsul-payment8006'
-findProject(':cloud-providerconsul-payment8006')?.name = 'cloud-providerconsul-payment8006'
 include 'cloud-consumerconsul-order80'
-findProject(':cloud-consumerconsul-order80')?.name = 'cloud-consumerconsul-order80'
 include 'cloud-consumer-feign-order80'
-findProject(':cloud-consumer-feign-order80')?.name = 'cloud-consumer-feign-order80'
 include 'cloud-provider-hystrix-payment8001'
-findProject(':cloud-provider-hystrix-payment8001')?.name = 'cloud-provider-hystrix-payment8001'
 include 'cloud-consumer-hystrix-order80'
-findProject(':cloud-consumer-hystrix-order80')?.name = 'cloud-consumer-hystrix-order80'
 include 'cloud-consumer-hystrix-dashboard9001'
-include 'cloud-gateway-gateway0527'
+include 'cloud-gateway-gateway9527'
+include 'cloud-config-center3344'
+include 'cloud-config-client3355'
+include 'cloud-config-client3366'
+include 'cloud-config-client3366'
 
