--- a/cloud-config-client3355/src/main/resources/bootstrap.yml
+++ b/cloud-config-client3355/src/main/resources/bootstrap.yml
@@ -17,3 +17,9 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
