--- a/cloud-config-client3355/build.gradle
+++ b/cloud-config-client3355/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.1.RELEASE"
     implementation "org.springframework.cloud:spring-cloud-starter-config:2.2.1.RELEASE"
+    implementation "org.springframework.cloud:spring-cloud-starter-bus-amqp:2.2.1.RELEASE"
     implementation "com.bp:cloud-api-common:1.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
