--- a/cloud-consumer-hystrix-dashboard9001/build.gradle
+++ b/cloud-consumer-hystrix-dashboard9001/build.gradle
@@ -10,6 +10,6 @@ repositories {
 }
 
 dependencies {
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard:2.2.1.RELEASE"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
