--- a/cloud-consumerconsul-order80/build.gradle
+++ b/cloud-consumerconsul-order80/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery:2.2.1.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
     implementation "com.bp:cloud-api-common:1.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
