--- a/cloud-consumerzk-order80/build.gradle
+++ b/cloud-consumerzk-order80/build.gradle
@@ -12,7 +12,7 @@ repositories {
 
 dependencies {
 
-    compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery:2.2.1.RELEASE')
+    compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
     implementation "com.bp:cloud-api-common:1.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
