--- a/cloud-provider-hystrix-payment8001/build.gradle
+++ b/cloud-provider-hystrix-payment8001/build.gradle
@@ -7,8 +7,8 @@ version '1.0'
 
 
 dependencies {
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.1.RELEASE"
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.1.RELEASE"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix"
     implementation 'cn.hutool:hutool-all:5.1.0'
     implementation "com.bp:cloud-api-common:1.0"
 }
