--- a/cloud-provider-payment8001/build.gradle
+++ b/cloud-provider-payment8001/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 dependencies {
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.1.RELEASE"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
     implementation "com.bp:cloud-api-common:1.0"
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.0"
     implementation "com.alibaba:druid:1.1.16"
