--- a/cloud-provider-payment8004/build.gradle
+++ b/cloud-provider-payment8004/build.gradle
@@ -12,6 +12,6 @@ repositories {
 
 dependencies {
 
-    compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery:2.2.1.RELEASE')
+    compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
