--- a/cloud-providerconsul-payment8006/build.gradle
+++ b/cloud-providerconsul-payment8006/build.gradle
@@ -10,6 +10,6 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery:2.2.1.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
