--- a/settings.gradle
+++ b/settings.gradle
@@ -19,4 +19,7 @@ include 'cloud-config-client3355'
 include 'cloud-config-client3366'
 include 'cloud-config-client3366'
 include 'cloud-stream-rabbitmq-provider8801'
+include 'cloud-stream-rabbitmq-consumer8802'
+include 'cloud-stream-rabbitmq-consumer8803'
+include 'cloud-stream-rabbitmq-consumer8803'
 
