springcloud rabbitmq consumer group

--- a/cloud-stream-rabbitmq-consumer8802/src/main/resources/application.yml
+++ b/cloud-stream-rabbitmq-consumer8802/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
           destination: studyExchange # exchange name
           content-type: application/json # message type
           binder: defaultRabbit
-          group: groupSG
+#          group: groupSG
 
 eureka:
   client:
