--- a/cloud-consumer-order80/build.gradle
+++ b/cloud-consumer-order80/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
+    implementation "org.springframework.cloud:spring-cloud-starter-zipkin"
     implementation "com.bp:cloud-api-common:1.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
