spring cloud nacos

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ subprojects {
         implementation "org.springframework.boot:spring-boot-starter-web"
         implementation "org.springframework.boot:spring-boot-starter-actuator"
         implementation "org.springframework.boot:spring-boot-starter-test"
+        implementation "org.springframework.cloud:spring-cloud-commons"
         annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
         compileOnly "org.springframework.boot:spring-boot-devtools"
         testCompile "junit:junit:4.12"
