--- a/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
+++ b/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
@@ -12,7 +12,8 @@ spring:
         server-addr: localhost:8848 #Nacos config service
         file-extension: yaml
         group: DEV_GROUP
-        namespace: 7d8f0f5a-6a53-4785-9686-dd460158e5d4
+        # namespace id
+        namespace: 5d49b6d6-2d35-41fc-a075-95240c222d51
 
 
 # ${spring.application.name}-${spring.profile.active}.${spring.cloud.nacos.config.file-extension}
