--- a/cloudalibaba-provider-payment9001/src/main/resources/application.yml
+++ b/cloudalibaba-provider-payment9001/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 127.0.0.1:8080
+
 
 management:
   endpoints:
