--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,11 @@
 rootProject.name = 'spring-cloud-learning'
 include 'cloud-consumer-order80'
 //include 'cloud-api-common'
-include 'cloud-eureka-server7001'
-include 'cloud-eureka-server7002'
-include 'cloud-provider-payment8001'
-include 'cloud-provider-payment8002'
-include 'cloud-provider-payment8004'
+//include 'cloud-eureka-server7001'
+//include 'cloud-eureka-server7002'
+//include 'cloud-provider-payment8001'
+//include 'cloud-provider-payment8002'
+//include 'cloud-provider-payment8004'
 //include 'cloud-consumerzk-order80'
 //include 'cloud-providerconsul-payment8006'
 //include 'cloud-consumerconsul-order80'
@@ -26,4 +26,5 @@ include 'cloudalibaba-provider-payment9001'
 include 'cloudalibaba-provider-payment9002'
 include 'cloudalibaba-consumer-nacos-order83'
 include 'cloudalibaba-config-nacos-client3377'
+include 'cloudalibaba-sentinel-service8401'
 
