spring cloud sentinel persistence

--- a/cloudalibaba-consumer-nacos-order84/src/main/resources/application.yml
+++ b/cloudalibaba-consumer-nacos-order84/src/main/resources/application.yml
@@ -17,6 +17,6 @@ spring:
 service-url:
   nacos-user-service: http://nacos-payment-provider
 
-#feign:
-#  sentinel:
-#    enabled: true
+feign:
+  sentinel:
+    enabled: true
