spring cloud seata order module

--- a/seata-order-service2001/src/main/resources/file.conf
+++ b/seata-order-service2001/src/main/resources/file.conf
@@ -5,8 +5,6 @@ transport {
   server = "NIO"
   #enable heartbeat
   heartbeat = true
-  # the client batch send request enable
-  enableClientBatchSendRequest = false
   #thread factory for netty
   threadFactory {
     bossThreadPrefix = "NettyBoss"
@@ -28,11 +26,11 @@ transport {
   serialization = "seata"
   compressor = "none"
 }
-# service configuration, only used in client side
+
 service {
-  #transaction service group mapping
-  vgroupMapping.my_test_tx_group = "fsp_tx_group"
-  #only support when registry.type=file, please don't set multiple addresses
+
+  vgroup_mapping.fsp_tx_group = "default" #修改自定义事务组名称
+
   default.grouplist = "127.0.0.1:8091"
   #degrade, current not support
   enableDegrade = false
