--- a/seata-account-service2003/src/main/resources/application.yml
+++ b/seata-account-service2003/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 2001
+  port: 2003
 
 spring:
   application:
-    name: seata-order-service
+    name: seata-account-service
   cloud:
     alibaba:
       seata:
@@ -13,7 +13,7 @@ spring:
         server-addr: localhost:8848
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seata_order
+    url: jdbc:mysql://localhost:3306/seata_account
     username: root
     password: password
 
