--- a/seata-storage-service2002/src/main/resources/application.yml
+++ b/seata-storage-service2002/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 2001
+  port: 2002
 
 spring:
   application:
-    name: seata-order-service
+    name: seata-storage-service
   cloud:
     alibaba:
       seata:
@@ -13,13 +13,9 @@ spring:
         server-addr: localhost:8848
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seata_order
+    url: jdbc:mysql://localhost:3306/seata_storage
     username: root
     password: password
-
-feign:
-  hystrix:
-    enabled: false
 
 logging:
   level:
