--- a/settings.gradle
+++ b/settings.gradle
@@ -1,27 +1,27 @@
 rootProject.name = 'spring-cloud-learning'
-include 'cloud-consumer-order80'
-include 'cloud-api-common'
-include 'cloud-eureka-server7001'
-include 'cloud-eureka-server7002'
-include 'cloud-provider-payment8001'
-include 'cloud-provider-payment8002'
-include 'cloud-provider-payment8004'
-include 'cloud-consumerzk-order80'
-include 'cloud-providerconsul-payment8006'
-include 'cloud-consumerconsul-order80'
-include 'cloud-consumer-feign-order80'
-include 'cloud-provider-hystrix-payment8001'
-include 'cloud-consumer-hystrix-order80'
-include 'cloud-consumer-hystrix-dashboard9001'
-include 'cloud-gateway-gateway9527'
-include 'cloud-config-center3344'
-include 'cloud-config-client3355'
-include 'cloud-config-client3366'
-include 'cloud-config-client3366'
-include 'cloud-stream-rabbitmq-provider8801'
-include 'cloud-stream-rabbitmq-consumer8802'
-include 'cloud-stream-rabbitmq-consumer8803'
-include 'cloud-stream-rabbitmq-consumer8803'
+//include 'cloud-consumer-order80'
+//include 'cloud-api-common'
+//include 'cloud-eureka-server7001'
+//include 'cloud-eureka-server7002'
+//include 'cloud-provider-payment8001'
+//include 'cloud-provider-payment8002'
+//include 'cloud-provider-payment8004'
+//include 'cloud-consumerzk-order80'
+//include 'cloud-providerconsul-payment8006'
+//include 'cloud-consumerconsul-order80'
+//include 'cloud-consumer-feign-order80'
+//include 'cloud-provider-hystrix-payment8001'
+//include 'cloud-consumer-hystrix-order80'
+//include 'cloud-consumer-hystrix-dashboard9001'
+//include 'cloud-gateway-gateway9527'
+//include 'cloud-config-center3344'
+//include 'cloud-config-client3355'
+//include 'cloud-config-client3366'
+//include 'cloud-config-client3366'
+//include 'cloud-stream-rabbitmq-provider8801'
+//include 'cloud-stream-rabbitmq-consumer8802'
+//include 'cloud-stream-rabbitmq-consumer8803'
+//include 'cloud-stream-rabbitmq-consumer8803'
 include 'cloudalibaba-provider-payment9001'
 include 'cloudalibaba-provider-payment9002'
 include 'cloudalibaba-consumer-nacos-order83'
