--- a/settings.gradle
+++ b/settings.gradle
@@ -22,15 +22,14 @@ rootProject.name = 'spring-cloud-learning'
 //include 'cloud-stream-rabbitmq-consumer8802'
 //include 'cloud-stream-rabbitmq-consumer8803'
 //include 'cloud-stream-rabbitmq-consumer8803'
-include 'cloudalibaba-provider-payment9001'
-include 'cloudalibaba-provider-payment9002'
+//include 'cloudalibaba-provider-payment9001'
+//include 'cloudalibaba-provider-payment9002'
 include 'cloudalibaba-consumer-nacos-order83'
-include 'cloudalibaba-config-nacos-client3377'
-include 'cloudalibaba-sentinel-service8401'
-include 'cloudalibaba-provider-payment9003'
-include 'cloudalibaba-provider-payment9004'
-include 'cloudalibaba-consumer-nacos-order84'
-include 'seata-order-service2001'
-include 'seata-storage-service2002'
-include 'seata-account-service2003'
-
+//include 'cloudalibaba-config-nacos-client3377'
+//include 'cloudalibaba-sentinel-service8401'
+//include 'cloudalibaba-provider-payment9003'
+//include 'cloudalibaba-provider-payment9004'
+//include 'cloudalibaba-consumer-nacos-order84'
+//include 'seata-order-service2001'
+//include 'seata-storage-service2002'
+//include 'seata-account-service2003'
